Spec § CP: Remove now-redundant ResolveTopicBinding abstract operation

--- a/spec.html
+++ b/spec.html
@@ -360,30 +360,17 @@ PrimaryExpression[Yield, Await] :
 </emu-note>
 </emu-clause>
 
-<emu-clause id=sec-resolvetopicbinding aoid=ResolveTopicBinding>
-<h1>Runtime Semantics: ResolveTopicBinding</h1>
-<emu-note type=editor>
-</emu-note>
-<emu-note>
-<p>ResolveTopicBinding returns the value to which the topic reference `#` is bound, using the Lexical Environment of the running execution context. It is <strong>never</strong> called when there is no topic environment.</p>
-</emu-note>
-<p>When the abstract operation ResolveTopicBinding is called the following steps are performed:</p>
-<emu-alg>
-1. Let _envRec_ be GetTopicEnvironment().
-2. Assert: _envRec_ is a declarative Environment Record.
-3. Assert: _envRec_.HasTopicBinding() is true.
-4. Return _envRec_.[[TopicValues]].
-</emu-alg>
-</emu-clause>
-
 <emu-clause id=sec-topic-references-runtime-semantics-evaluation>
 <h1>Runtime Semantics: Evaluation</h1>
 
 <emu-grammar>PrimaryExpression : `#`</emu-grammar>
 <emu-alg>
-1. Let _topicValues_ be ? ResolveTopicBinding().
-2. Assert: _topicValues_ has at least one element.
-3. Return topicValues_[0].
+1. Let _envRec_ be GetTopicEnvironment().
+2. Assert: _envRec_ is a declarative Environment Record.
+3. Assert: _envRec_.HasTopicBinding() is true.
+4. Let _topicValues_ be _envRec_.[[TopicValues]].
+5. Assert: _topicValues_ has at least one element.
+6. Return topicValues_[0].
 </emu-alg>
 </emu-clause>
 
@@ -1780,9 +1767,12 @@ RestTopicReference :
 <emu-grammar>PrimaryExpression : `#`</emu-grammar>
 <del class=block>
 <emu-alg>
-1. Let _topicValues_ be ? ResolveTopicBinding().
-2. Assert: _topicValues_ has at least one element.
-3. Return topicValues_[0].
+1. Let _envRec_ be GetTopicEnvironment().
+2. Assert: _envRec_ is a declarative Environment Record.
+3. Assert: _envRec_.HasTopicBinding() is true.
+4. Let _topicValues_ be _envRec_.[[TopicValues]].
+5. Assert: _topicValues_ has at least one element.
+6. Return topicValues_[0].
 </emu-alg>
 </del>
 <ins class=block>
