Spec § NP, Syntax: Add ArgumentList : RestTopicReference production See #16.

--- a/spec.html
+++ b/spec.html
@@ -1939,7 +1939,9 @@ Arguments[Yield, Await] :
 ArgumentList[Yield, Await] :
   AssignmentExpression[+In, ?Yield, ?Await]
   `...` AssignmentExpression[+In, ?Yield, ?Await]
+  <ins class=block>
   RestTopicReference
+  </ins>
   ArgumentList[?Yield, ?Await] `,` AssignmentExpression[+In, ?Yield, ?Await]
   ArgumentList[?Yield, ?Await] `,` `...` AssignmentExpression[+In, ?Yield, ?Await]
   ArgumentList[?Yield, ?Await] `,` RestTopicReference
