--- a/spec.html
+++ b/spec.html
@@ -2050,7 +2050,7 @@ ArgumentList[Yield, Await] :
 <emu-annex id=sec-additional-feature-np-pipe-operator>
 <h1>Pipe Operator</h1>
 <emu-note type=editor>
-<p>This section revises the <emu-xref href=#sec-pipe-operator>new clause in the core proposal</emu-xref>. It is mutually compatible with <emu-xref href=#sec-additional-feature-bp-pipe-operator>further modifications by Additional Feature BP</emu-xref>.</p>
+<p>This section revises the <emu-xref href=#sec-pipe-operator>new clause in the core proposal</emu-xref>.</p>
 </emu-note>
 
 <h2>Syntax</h2>
